--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,15 @@
 <div class= "d-flex justify-content-center">
-<div class=  "social-share-button">
 
-    <%= rails_social_share_button_tag(request.original_url + "  Orientacion Familiar una guia para el hogar / Home page", url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu Home page") %>
-    <a href=""><%= image_tag("https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_instagram-512.png", class:" share-button ssb-icon") %></a>
-
-
-
+<div class=  "social-share-button mb-5">
+         <h2 style= "color:white"> Comparte nuestro contenido en todas las redes sociales  </h2>
+    <h3 style= "color:white"> con solo un click ! </h3>
+       <a href=""><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:" share-button ssb-icon") %></a>
+        <a href=""><%= image_tag("https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_instagram-512.png", class:" share-button ssb-icon") %></a>
+        <%= rails_social_share_button_tag(request.original_url + "  Orientacion Familiar una guia para el hogar / Home page", url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu Home page") %>
 </div>
 </div>
-<div style = "margin-top = 45px">
+
+<div style = "margin-top = 60px">
 <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
 <ol class="carousel-indicators">
 <li data-target="#carousel" data-slide-to="0" class=""></li>
