adding some metadata to index page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,12 @@
+<meta property="og:image" content="familiaLatina.jpg">
+<meta property="og:title" content="Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu">
 <div class= "d-flex justify-content-center">
 
 <div class=  "social-share-button mb-5">
     <h2 style= "color:white"> Comparte nuestro contenido en todas las redes sociales  </h2>
     <h3 style= "color:white"> con solo un click ! </h3>
   <a href=""><%= image_tag("https://cdn0.iconfinder.com/data/icons/social-network-7/50/5-512.png", class:" share-button ssb-icon") %></a>
-    <%= rails_social_share_button_tag( request.original_url + " " + ' Home index Page Inicio', url: request.original_url, desc: " Escucha nuestros Audios y podcasts de Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+    <%= rails_social_share_button_tag( request.original_url + " " + ' Home index Page Inicio', url: request.original_url, desc: " Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
 </div>
 </div>
 
