--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,13 @@
 
 <div class=  "social-share-button">
   <h2 style= "color:white"> Comparte nuestro contenido en todas redes sociales ! </h2>
-  <a href=""><%= image_tag("https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_instagram-512.png", class:" share-button ssb-icon") %></a>
-<a href=""><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:" share-button ssb-icon") %></a>
+    <h3 style= "color:white"> con solo un click ! </h3>
+    <a href=""><%= image_tag("https://cdn0.iconfinder.com/data/icons/social-network-7/50/5-512.png", class:" share-button ssb-icon") %></a>
     <%= rails_social_share_button_tag( request.original_url  + '  ' + @post.main_title , url: request.original_url , desc:  @post.main_title + ' Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu') %>
 
 </div>
 
-<body>
+<body style= "color:white">
 <img src="<%= @post.main_image_post_url %>" class="img-fluid" alt="Responsive image">
 <div class= 'h1'>
   <%= @post.main_title  %>
