--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html >
   <head>
+    <meta charset= "utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Orientacion Familiar Una Guia para El Hogar</title>
+    <meta property="og:image" content="<%= banner.png %>">
+    <meta property="og:title" content="<%= meta_title %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="<%= meta_image %>" />
+    <meta property="og:description" content="<%= meta_description %>" />
+    <meta property="og:site_name" content="<%= meta_title %>" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
