seting up metadata initiliazers and configurations for robust metedata

--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -1,3 +1,14 @@
+  <head>
+    <meta charset= "utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Articulos y posts de Orientacion Familiar</title>
+    <meta property="og:title" content="<%= meta_title %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="<%= meta_image %>" />
+    <meta property="og:description" content="<%= meta_description %>" />
+    <meta property="og:site_name" content="<%= meta_title %>" />
+  </head>
 <body>
 <div class=  "social-share-button mb-5">
     <h2 style= "color:white"> Comparte nuestro contenido en todas las redes sociales  </h2>
