--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,14 @@
-
+  <head>
+    <meta charset= "utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Articulos y posts de Orientacion Familiar</title>
+    <meta property="og:title" content="<%= @post.title %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="<%= @post.main_image_post_url  %>" />
+    <meta property="og:description" content="<%= @post.author %>" />
+    <meta property="og:site_name" content="<%= @post.description %>" />
+  </head>
 <div class=  "social-share-button">
   <h2 style= "color:white"> Comparte nuestro contenido en todas redes sociales ! </h2>
     <h3 style= "color:white"> con solo un click ! </h3>
@@ -8,7 +18,7 @@
 </div>
 
 <body style= "color:white">
-<img src="<%= @post.main_image_post_url %>" class="img-fluid" alt="Responsive image">
+<img src="<%= @post.main_image_post_url %>" class="img-fluid" alt="">
 <div class= 'h1'>
   <%= @post.main_title  %>
 </div></br>
