seting up metadata initiliazers and configurations for robust metedata

--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -1,5 +1,15 @@
 <html>
 <head>
+   <meta charset= "utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>TV y Radio Orientacion Familiar Una guia para el Hogar </title>
+    <meta property="og:title" content="Radio, TV Orientacion Familiar Una Guia Para El Hogar %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="https://cdn6.aptoide.com/imgs/9/b/e/9be17c29cf326365ae929503122338a9_icon.png?w=160" />
+    <meta property="og:description" content="TV, Radio, Audio Podcast, Reflexiones y articulos" />
+    <meta property="og:site_name" content="Orientacion Familiar Una Guia Para El Hogar Radio, TV, Audios " />
+  </head>
     <div class= "d-flex justify-content-center">
 <div class=  "social-share-button mb-5">
            <h2 style= "color:white"> Comparte nuestro contenido en todas las redes sociales  </h2>
