updating meta images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta property="og:title" content="<%= meta_title %>" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="https://bridgestherapyandwellness.com/wp-content/uploads/2018/02/Multiethnic-family.jpg" />
+    <meta property="og:image" content="https://www.canva.com/design/DAD5w9Kq6_U/Mn7kCZR9ii5mgqp89KwQMA/view?utm_content=DAD5w9Kq6_U&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" />
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:site_name" content="<%= meta_title %>" />
     <%= csrf_meta_tags %>
