--- a/app/views/uploads/show.html.erb
+++ b/app/views/uploads/show.html.erb
@@ -1,11 +1,11 @@
   <head>
     <meta charset= "utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Articulos y posts de Orientacion Familiar</title>
+    <title>Audio podcasts de Orientacion Familiar</title>
     <meta property="og:title" content="<%= @upload.title %>" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="https://casateyveras.com/wp-content/uploads/2019/05/familia-9-1024x673.png" />
+    <meta property="og:image" content="https://casateyveras.com/wp-content/uploads/2019/05/familia-9-1024x673.png"/>
     <meta property="og:description" content="<%= @upload.description %>" />
     <meta property="og:site_name" content="<%= @upload.title %>" />
   </head>
