updating meta images and indexes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,14 @@
-
-
+    <head>
+    <meta charset= "utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Orientacion Familiar Una Guia para El Hogar</title>
+    <meta property="og:title" content="<%= meta_title %>" />
+    <meta property="og:type" content="Orientacion Familiar Website" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="https://www.canva.com/design/DAD5w9Kq6_U/Mn7kCZR9ii5mgqp89KwQMA/view?utm_content=DAD5w9Kq6_U&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" />
+    <meta property="og:description" content="<%= meta_description %>" />
+    <meta property="og:site_name" content="<%= meta_title %>" />
+    </head>
 <div class= "d-flex justify-content-center">
 
 <div class=  "social-share-button mb-5">
