--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
     <meta property="og:title" content="<%= meta_title %>" />
     <meta property="og:type" content="Orientacion Familiar Website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="https://www.canva.com/design/DAD5w9Kq6_U/Mn7kCZR9ii5mgqp89KwQMA/view?utm_content=DAD5w9Kq6_U&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" />
+    <meta property="og:image" content="https://orifamiliar.s3.amazonaws.com/Dise%C3%B1o+sin+t%C3%ADtulo.png"/>
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:site_name" content="<%= meta_title %>" />
     </head>
