--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -5,7 +5,7 @@
     <meta property="og:title" content="<%= meta_title %>" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="<%= meta_image %>" />
+    <meta property="og:image" content="https://orifamiliar.s3.amazonaws.com/audio+podcast.jpg" />
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:site_name" content="<%= meta_title %>" />
   </head>
