--- a/app/views/uploads/show.html.erb
+++ b/app/views/uploads/show.html.erb
@@ -5,7 +5,7 @@
     <meta property="og:title" content="<%= @upload.title %>" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="https://casateyveras.com/wp-content/uploads/2019/05/familia-9-1024x673.png"/>
+    <meta property="og:image" content="https://orifamiliar.s3.amazonaws.com/Somos+TV+%26+Radio.jpg"/>
     <meta property="og:description" content="<%= @upload.description %>" />
     <meta property="og:site_name" content="<%= @upload.title %>" />
   </head>
